# coach

./: .gitignore  AGENTS.md  DB design plan.md  DB schema plan.md  README.md  TRUECOACH_PLAN.md  alembic.ini  exercise_abbreviations.json  pyproject.toml  workout_categories.json
alembic/: env.py
alembic/versions/: 20260628_0001_initial_schema.py  20260628_0002_exercise_source_aliases.py  20260628_0003_exercise_mapper_support.py
coach_truecoach/: __init__.py  api.py  browser.py  cli.py  config.py  parser.py
coach_truecoach/ai/: __init__.py  category_assignment.py  exercise_mapping.py
coach_truecoach/db/: __init__.py  importers.py  models.py  session.py
tests/: test_category_assignment.py  test_exercise_mapping.py
