[project]
name = "coach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.0",
    "playwright>=1.53.0",
    "python-dotenv>=1.1.1",
    "psycopg[binary]>=3.2.9",
    "sqlalchemy>=2.0.41",
]

[project.scripts]
coach = "coach_truecoach.cli:main"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["coach_truecoach"]
